fetch CRUD apis

--- a/react-typescript-frontend/src/Components/TextInputFormStyles.scss
+++ b/react-typescript-frontend/src/Components/TextInputFormStyles.scss
@@ -43,5 +43,6 @@
     width: 200px !important;
     margin-right: 15px !important;
     margin-left: 120px !important;
-    background-color:white
+    background-color:white !important;
+    color: black !important;
   }
